# image-colorization

./: .gitignore  README.md  pyproject.toml
.dvc/: config
configs/: main.yaml
configs/model/: cgan.yaml  model.yaml
models/first-models/: generator.pt  model.pt
notebooks/: img_to_parquets.ipynb  test1.ipynb
spz/: utils.py
src/: inference.py  main.py  model.py  prepare_data.py  train.py  transform_data.py  utils.py
src/arch/cgan/: model.py  runner.py  utils.py
src/arch/proper_cgan/: dataset.py  losses.py  model.py  pl_dataset.py  signature.py  utils.py
src/datasets/: cgan_dataset.py
src/deployment/api/: __main__.py
src/deployment/app/: __main__.py
