[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Alexey Tkachenko <a.tkachenko@innopolis.university>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ipykernel = "^6.29.5"
torch = "^2.4.1"
dvc = "^3.55.2"
zenml = "^0.67.0"
streamlit = "^1.39.0"
torchvision = "^0.19.1"
matplotlib = "^3.9.2"
scikit-image = "^0.24.0"
fastai = "^2.7.17"
pytorch-lightning = "^2.4.0"
opencv-python = "^4.10.0.84"
tensorboard = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
